# mcp-tools

./: README.md  main.py  mcp_client.py  pyproject.toml  requirements.txt  test-openai.py  test_bedrock.py  test_ollama.py  test_openai.py
tools/: cli_server.py  cli_tool.py  math_server.py  weather_server.py  web_scrape_tool.py
