[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.25",
    "langgraph>=0.4.3",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "paramiko>=3.5.1",
    "python-dotenv>=1.1.0",
]
